Fix compilation issues after rebase